tdf#144437: rtf export: bookmark position is written to current run

Bookmark was written to not current position thus did appear not at
desired place inside paragraph.

Change-Id: I917f74c95666efd38c5befeb927b75783915b2e8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122722
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>